--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 	.body{
-			background-color: #686868;
+			background-color: white;
 		}
 		.jumbotron{
 			background-image: url("pics/jumboback2.jpg");
